Added leaderboard limit, added score limit, translated credit page removed previews

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -19,4 +19,6 @@
     <string name="noScores">No scores found yet.</string>
     <string name="gameOver">Game Over</string>
     <string name="gamePaused">Game Paused</string>
+    <string name="creditsMsg">Game Developed by Kotlords\nThis application was programmed and designed by two students\nSimone Ferretti and Alessandro Libotte\nfrom the University of Rome: Uniroma2 Torvergata</string>
+    <string name="version">Version</string>
 </resources>
